--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Create a page that allows users to select a destination from a form. Selectable destinations are filtered from a list of categories based on the season chosen by the user. Once selected, the destination is displayed below the form.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start"
+    "open-html": "open index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
